@@ -1,12 +1,10 @@
 package com.chrosciu.encoder;
 
-import sun.misc.BASE64Encoder;
-
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 public class EncoderService {
     public String encodeBase64(String input) {
-        return new BASE64Encoder().encode(input.getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString(input.getBytes(StandardCharsets.UTF_8));
     }
 }
